# LibSensorsTools

./: .gitignore  .gitmodules  Makefile  README.md  cpu_tools.h  gpu_tools.h  sensor_tool.cpp  sensor_tool.h
Analysis/: active_assoc.py  commands.txt  flow_vs_rpm.py  incomplete_json_loader.py  liveTemps.py  nohup_vis.py  temperature_vis.py
Analysis/with_timestamps/: temperature_vis_with_timestamps.py
Benchmarks/: .gitignore  README.md  bonus_EMOGI.sh  day_monitor.sh  hpccinf.txt  multiGPU_DGEMM.sh  multiGPU_EMOGI.sh  multiGPU_Stream.sh  multiGPU_md5_bruteforce.sh  multiGPU_md5_cracker.sh  multiGPU_mlperf_inference_resnet50.sh  multinode_hpcc.sh  multinode_npb_dt.sh  multinode_npb_ep.sh  multinode_npb_is.sh  non_deepgreen_NPB_EP.sh  pyloop.py  run_two_pyloops.sh  sensor_launcher.sh  sleep_counter.sh
Data/: attempt1_streamgpulong.error  attempt1_streamgpulong.json  example1_csv.csv  example2_json.err  ns_dg_stream.csv  st_dg_stream.csv  stream.err  stream.json  stream.out  stream_GPU.json  stream_GPU.out  stream_gpu_long.json  stream_normal.json  stream_push_button.json
Data/Synthesis/: custom_emogi_dataset.py  print_emogi_graph.py
SensorTools/: CMakeLists.txt  Makefile  common_driver.cpp  common_driver.h  control.cpp  control.cpp.in  control.h  control.h.in  cpu_tools.cpp  cpu_tools.h  definitions.h  enums.h  example_submer.json  gpu_tools.cpp  gpu_tools.h  io_tools.cpp  io_tools.h  nvme_tools.cpp  nvme_tools.h  print_build_structure.sh  sensor_tool.cpp  sensor_tool.h  server.cpp  server.h  simple_nvme.cpp  submer_api.h  submer_tools.cpp  submer_tools.h
SensorTools/deepgreen_build/: build.sh
SensorTools/deepgreen_build/debug/: build.sh
SensorTools/driver/: common_driver.cpp  common_driver.h
SensorTools/io/: argparse_base.cpp  argparse_base.h  output.cpp  output.h  timestamp_buf.cpp  timestamp_buf.h
SensorTools/tools/cpu/: cpu_tools.h
SensorTools/tools/gpu/: gpu_tools.h
SensorTools/tools/nvme/: nvme_tools.h
SensorTools/tools/pdu/: pdu_tools.cpp  pdu_tools.h  snmp.c  snmp_hosts_and_oids.h
SensorTools/tools/submer/: submer_api.h  submer_tools.cpp  submer_tools.h
data/: example1_csv.err  example2_json.json
legacy/: node-stats.c
snmp/: Makefile  deepgreen-snmp.cpp  deepgreen-snmp.hpp  driver  driver.cpp  snmp.c  snmp.h
